[metadata]
name = deeplearning_prod
version = 1.0
author = JoshuaPhuongLe
author_email = phuonglevu3112@gmail.com
description = deeplearning model development and deployment according to Deep Learning in Production book
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshuavaple/deeplearning_prod
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt


[options]
packages = find:

[options.packages.find]
include = deeplearning_prod
